# siggler

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
src/siggler/: call.py  exceptions.py  protocols.py  registry.py
src/siggy/: __init__.py  exceptions.py  signature.py
tests/: conftest.py  integration_tests.py
