[project]
name = "siggy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "matthew-robb", email = "116180526+matthew-robb@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[project.scripts]
siggy = "siggy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "openai>=1.68.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
